cabal-version:       >=1.10

name:                league-champion-top10
version:             0.1.0.1
license:             GPL-3
license-file:        LICENSE
author:              Ville-Markus Yli-Suutala
maintainer:          3628916+VeeEM@users.noreply.github.com
build-type:          Simple

executable lctop
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
                     , http-client
                     , http-client-tls
                     , bytestring
                     , scalpel
                     , utf8-string
                     , aeson
                     , unordered-containers
                     , vector
                     , text
                     , directory
  -- hs-source-dirs:
  default-language:    Haskell2010
